[package]
name = "helm-templexer"
version = "0.2.4"
authors = ["Hendrik Maus <aidentailor@gmail.com>"]
edition = "2018"

description = "Render Kubernetes Helm charts for multiple environments with _explicit config_ while keeping the overhead at ease"
license = "MIT"
keywords = ["kubernetes", "helm"]
readme = "README.md"
categories = ["command-line-utilities"]

[[bin]]
name = "helm-templexer"
path = "src/main.rs"
doc = false

[dependencies]
structopt = "0"
structopt-flags = "0"
log = "0"
env_logger = "0"
anyhow = "1"
thiserror = "1"
serde_any = "0"
serde = "1"
subprocess = "0"

[dev-dependencies]
assert_cmd = "1"
predicates = "1"
pretty_assertions = "0"
