[package]
name = "helm-templexer"
version = "2.0.3"
authors = ["Hendrik Maus <aidentailor@gmail.com>"]
edition = "2018"

description = "Render Kubernetes Helm charts for multiple environments with _explicit config_ while keeping the overhead at ease"
license = "MIT"
keywords = ["kubernetes", "helm"]
readme = "README.md"
categories = ["command-line-utilities"]

[[bin]]
name = "helm-templexer"
path = "src/main.rs"
doc = false

[dependencies]
structopt = "0.3"
structopt-flags = "0.3"
log = "0.4"
env_logger = "0.8"
anyhow = "1"
serde = "1"
serde_yaml = "0.8"
subprocess = "0.2"
indexmap = "1"
format_serde_error = "0.3"
regex = "1"
cmd_lib = "1"

[dev-dependencies]
assert_cmd = "1"
predicates = "1"
pretty_assertions = "0.7"
